// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropButton close by clicking outside 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    Dropper
  </div>
</button>
`;

exports[`DropButton close by clicking outside 2`] = `
<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton close by clicking outside 3`] = `
"@media only screen and (max-width:768px) {
  .hHwlHq {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .hHwlHq {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .iVWgBr {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .iVWgBr {
    padding: 0px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .fvCzyJ {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;

exports[`DropButton closed 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

<button
  aria-label="Open Drop"
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  type="button"
>
  <div
    className="c1"
  >
    Dropper
  </div>
</button>
`;

exports[`DropButton disabled 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

<button
  aria-label="Open Drop"
  class="c0"
  disabled=""
  type="button"
>
  <div
    class="c1"
  >
    Dropper
  </div>
</button>
`;

exports[`DropButton open and close 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    Dropper
  </div>
</button>
`;

exports[`DropButton open and close 2`] = `
<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton open and close 3`] = `
"@media only screen and (max-width:768px) {
  .hHwlHq {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .hHwlHq {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .iVWgBr {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .iVWgBr {
    padding: 0px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .fvCzyJ {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;

exports[`DropButton opened 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

<button
  aria-label="Open Drop"
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  type="button"
>
  <div
    className="c1"
  >
    Dropper
  </div>
</button>
`;

exports[`DropButton opened ref 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  <div
    class="c1"
  >
    Dropper
  </div>
</button>
`;

exports[`DropButton opened ref 2`] = `
<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton opened ref 3`] = `
"@media only screen and (max-width:768px) {
  .hHwlHq {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .hHwlHq {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .iVWgBr {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .iVWgBr {
    padding: 0px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .fvCzyJ {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;
